<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/btA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btVoltar3"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/btC"
        android:height="70dp"
        android:text="@string/btA"
        android:width="65dp" />

    <Button
        android:id="@+id/btVoltar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:height="70dp"
        android:text="@string/bt_voltar3"
        android:width="100dp" />

    <Button
        android:id="@+id/btC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btD"
        android:layout_alignParentRight="true"
        android:height="70dp"
        android:text="@string/btC"
        android:width="65dp" />

    <Button
        android:id="@+id/btD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btm4"
        android:layout_alignBottom="@+id/btm4"
        android:layout_alignLeft="@+id/btA"
        android:height="70dp"
        android:text="@string/btD"
        android:width="65dp" />

    <Button
        android:id="@+id/btB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btA"
        android:layout_toLeftOf="@+id/btA"
        android:height="70dp"
        android:text="@string/btAcaoB"
        android:width="65dp" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt2"
        android:layout_marginRight="28dp"
        android:layout_toLeftOf="@+id/btVoltar3"
        android:height="70dp"
        android:text="@string/bt_1"
        android:width="65dp" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btB"
        android:layout_alignBottom="@+id/btB"
        android:layout_toRightOf="@+id/btm4"
        android:height="70dp"
        android:text="@string/bt_2"
        android:width="65dp" />

    <Button
        android:id="@+id/btm4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt1"
        android:layout_below="@+id/bt2"
        android:height="70dp"
        android:text="@string/bt_4"
        android:width="65dp" />

    <Button
        android:id="@+id/btm3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btm4"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bt1"
        android:layout_toLeftOf="@+id/bt1"
        android:text="@string/bt_3" />

</RelativeLayout>