<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

    <ToggleButton
        android:id="@+id/btmover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btvoltar"
        android:height="80dp"
        android:text="ToggleButton"
        android:width="100dp" />

    <Button
        android:id="@+id/btvoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:height="60dp"
        android:text="@string/bt_voltar"
        android:textSize="22sp"
        android:width="100dp" />

    <Button
        android:id="@+id/botaoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/botaoB"
        android:layout_alignBottom="@+id/botaoB"
        android:layout_alignLeft="@+id/botaoC"
        android:height="90dp"
        android:text="@string/btA"
        android:textSize="30sp"
        android:width="90dp" />

    <Button
        android:id="@+id/botaoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botaoA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:height="90dp"
        android:text="@string/btC"
        android:textSize="30sp"
        android:width="90dp" />

    <Button
        android:id="@+id/botaoD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/botaoC"
        android:layout_alignBottom="@+id/botaoC"
        android:layout_alignParentRight="true"
        android:layout_marginRight="37dp"
        android:height="90dp"
        android:text="@string/btD"
        android:textSize="30sp"
        android:width="90dp" />

    <Button
        android:id="@+id/botaoB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botaoD"
        android:layout_below="@+id/btvoltar"
        android:height="90dp"
        android:text="@string/btAcaoB"
        android:textSize="30sp"
        android:width="90dp" />

</RelativeLayout>